--- a/www/landing.html
+++ b/www/landing.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="css/landing.css" media="screen" title="no title" charset="utf-8">
 
   </head>
