index, login and signup links updated

--- a/www/login.html
+++ b/www/login.html
@@ -40,7 +40,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="box2">
           <div id="box3">
             <p>Not a member yet?<br>
-              <a href="#">Join us</a></p>
+              <a href="signup.html">Join us</a></p>
           </div>
         </div>
       </div>
