--- a/www/signup.html
+++ b/www/signup.html
@@ -48,7 +48,7 @@
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="box2">
           <div id="box3">
             <p>Already a member?<br>
-              <a href="#">Login</a></p>
+              <a href="login.html">Login</a></p>
           </div>
         </div>
       </div>
