Root HTML renamed to Index.html

--- a/www/home.html
+++ b/www/home.html
@@ -37,29 +37,72 @@
     </nav>
 
     <div class="container">
-      <div class="row" id="my-projects">
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 project">
+      <h2>My Projects</h2>
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
 
+          </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 project">
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
 
+          </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 project">
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
 
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
+
+          </div>
         </div>
       </div>
 
-      <div class="row" id="other-projects">
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 project">
-
+      <div class="row">
+        <div class="col-lg-6">
+          <h2>Open Projects</h2>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 project">
-
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 project">
-
+        <div class="col-lg-6">
+          <a href="#"><i class="fa fa-plus"></i></a><span> Create new project<span>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+      </div>
+
     </div>
 
     <script src="js/jquery-2.2.0.min.js"></script>
