--- a/www/home.html
+++ b/www/home.html
@@ -37,8 +37,18 @@
     </nav>
 
     <div class="container">
-      <h2>My Projects</h2>
+
       <div class="row">
+        <div class="col-lg-12">
+          <button type="button" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h2"><a href="#"><i class="fa fa-plus-square"></i> Create new project</a><span></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <span class="new-h2">My Projects</span>
+        </div>
+      </div>
+      <div class="row box">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <div class="thumbnail">
 
@@ -68,14 +78,10 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h2>Open Projects</h2>
-        </div>
-        <div class="col-lg-6">
-          <a href="#"><i class="fa fa-plus"></i></a><span> Create new project<span>
+          <span class="new-h2">Open Projects</span>
         </div>
       </div>
-
-      <div class="row">
+      <div class="row box">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <div class="thumbnail">
 
