Name of the app (Fellowship) update in the pages

--- a/www/home.html
+++ b/www/home.html
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">XXXXXXX</a>
+          <a class="navbar-brand" href="#">Fellowship</a>
         </div>
 
         <div class="collapse navbar-collapse" id="collapse-1">
