--- a/www/profile.html
+++ b/www/profile.html
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">XXXXXXX</a>
+          <a class="navbar-brand" href="#">Fellowship</a>
         </div>
 
         <div class="collapse navbar-collapse" id="collapse-1">
@@ -35,6 +35,21 @@
         </div>
       </div>
     </nav>
+
+    <div class="container">
+
+      <div class="row">
+        <div class="col-lg-12">
+          <button type="button" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h2"><a href="#"><i class="fa fa-plus-square"></i> Create new project</a><span></button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <span class="new-h2">My Projects</span>
+        </div>
+      </div>
+
+    </div>
 
     <script src="js/jquery-2.2.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
