--- a/www/profile.html
+++ b/www/profile.html
@@ -39,13 +39,64 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-lg-12">
-          <button type="button" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h2"><a href="#"><i class="fa fa-plus-square"></i> Create new project</a><span></button>
+        <div class="col-lg-9">
+          <div class="row">
+            <div class="col-lg-2">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/AWS_Simple_Icons_Non-Service_Specific_User.svg/2000px-AWS_Simple_Icons_Non-Service_Specific_User.svg.png" height="120px" width="120px" />
+            </div>
+            <div class="col-lg-10">
+              <div class="col-lg-12">
+                <span class="new-h1">FName LName</span><span class="new-h3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@username</span>
+              </div>
+              <div class="col-lg-12">
+                <span class="new-h3">Ocupation</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <button type="button" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h2"><a href="#"><i class="fa fa-pencil"></i> Edit profile</a><span></button>
         </div>
       </div>
+
       <div class="row">
         <div class="col-lg-12">
-          <span class="new-h2">My Projects</span>
+          <br><span class="new-h1">Projects</span>
+        </div>
+      </div>
+      <div class="row box">
+        <div class="col-lg-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12">
+          <br><span class="new-h1">Skills</span>
+        </div>
+      </div>
+      <div class="row box">
+        <div class="col-lg-12">
+          <div class="thumbnail">
+
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="thumbnail">
+
+          </div>
         </div>
       </div>
 
