--- a/www/index.html
+++ b/www/index.html
@@ -11,29 +11,42 @@
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
 
-    <!-- SERVICES -->
-    <script src="js/modules/missions/services/services.js" charset="utf-8"></script>
-    <script src="js/modules/profiles/services/services.js" charset="utf-8"></script>
-    <script src="js/modules/projects/services/services.js" charset="utf-8"></script>
-    <script src="js/modules/quests/services/services.js" charset="utf-8"></script>
-    <script src="js/modules/slots/services/services.js" charset="utf-8"></script>
-    <script src="js/modules/users/services/services.js" charset="utf-8"></script>
+    <!-- API -->
+    <script src="js/modules/api/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/api/services/ApiService.js" charset="utf-8"></script>
+    <script src="js/modules/api/api.js" charset="utf-8"></script>
 
-    <!-- CONTROLLERS -->
-    <script src="js/modules/missions/controllers/controllers.js" charset="utf-8"></script>
-    <script src="js/modules/profiles/controllers/controllers.js" charset="utf-8"></script>
-    <script src="js/modules/projects/controllers/controllers.js" charset="utf-8"></script>
-    <script src="js/modules/quests/controllers/controllers.js" charset="utf-8"></script>
-    <script src="js/modules/slots/controllers/controllers.js" charset="utf-8"></script>
+    <!-- USER -->
+    <script src="js/modules/users/services/services.js" charset="utf-8"></script>
     <script src="js/modules/users/controllers/controllers.js" charset="utf-8"></script>
+    <script src="js/modules/users/users.js" charset="utf-8"></script>
+
+    <!-- PROFILES -->
+    <script src="js/modules/profiles/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/profiles/controllers/controllers.js" charset="utf-8"></script>
+    <script src="js/modules/profiles/profiles.js" charset="utf-8"></script>
+
+    <!-- SLOTS -->
+    <script src="js/modules/slots/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/slots/controllers/controllers.js" charset="utf-8"></script>
+    <script src="js/modules/slots/slots.js" charset="utf-8"></script>
+
+    <!-- PROJECTS -->
+    <script src="js/modules/projects/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/projects/controllers/controllers.js" charset="utf-8"></script>
+    <script src="js/modules/projects/projects.js" charset="utf-8"></script>
+
+    <!-- MISSIONS -->
+    <script src="js/modules/missions/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/missions/controllers/controllers.js" charset="utf-8"></script>
+    <script src="js/modules/missions/missions.js" charset="utf-8"></script>
+
+    <!-- QUESTS -->
+    <script src="js/modules/quests/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/quests/controllers/controllers.js" charset="utf-8"></script>
+    <script src="js/modules/quests/quests.js" charset="utf-8"></script>
 
     <!-- MODULES -->
-    <script src="js/modules/missions/missions.js" charset="utf-8"></script>
-    <script src="js/modules/profiles/profiles.js" charset="utf-8"></script>
-    <script src="js/modules/projects/projects.js" charset="utf-8"></script>
-    <script src="js/modules/quests/quests.js" charset="utf-8"></script>
-    <script src="js/modules/slots/slots.js" charset="utf-8"></script>
-    <script src="js/modules/users/users.js" charset="utf-8"></script>
     <script src="js/modules/modules.js" charset="utf-8"></script>
 
     <!-- APP -->
