Profile.html structure finished

--- a/www/profile.html
+++ b/www/profile.html
@@ -38,14 +38,14 @@
 
     <div class="container">
 
-      <div class="row">
+      <div class="row" id="center">
         <div class="col-lg-10 col-md-10 col-sm-10">
             <div class="col-lg-2 col-md-2 col-sm-3">
               <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/AWS_Simple_Icons_Non-Service_Specific_User.svg/2000px-AWS_Simple_Icons_Non-Service_Specific_User.svg.png" height="120px" width="120px" />
             </div>
             <div class="col-lg-10 col-md-10 col-sm-9">
               <div class="col-lg-12 col-md-12 col-sm-12">
-                <span class="new-h1">FName LName</span>&nbsp;&nbsp;<a href="#"><span id="oi"><i class="fa fa-pencil fa-2x"></span></i></a><span class="new-h3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@username</span>
+                <span class="new-h1">FName LName</span>&nbsp;&nbsp;<a href="#"><span id="pencil"><i class="fa fa-pencil fa-2x"></span></i></a><span class="new-h3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@username</span>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12">
                 <span class="new-h3">Ocupation</span>
