--- a/www/project.html
+++ b/www/project.html
@@ -37,8 +37,13 @@
     </nav>
 
     <div class="container">
-
-      <div class="row" id="right">
+      <div class="row" id="center">
+        <div class="col-lg-10 col-md-10 col-sm-10">
+            <br><span class="new-h1">Project Name</span>
+            <p class="text-justify">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat risus felis, sed pellentesque tellus dapibus eu. Nulla sed dolor posuere, aliquam turpis id, tincidunt orci. Phasellus metus nunc, porta ut faucibus sit amet, maximus in est. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris et elit sed nisi sollicitudin eleifend nec ut purus. Sed molestie augue sed mollis imperdiet. Curabitur sit amet ipsum in velit consequat blandit. Ut sollicitudin sem porta libero aliquam, et volutpat est scelerisque. Nulla imperdiet hendrerit risus, id porta purus gravida et. Nunc mi ante, ultricies sit amet varius a, euismod nec erat. Fusce nunc erat, vulputate ut ultricies ut, mollis ac tellus.
+            </p>
+        </div>
         <div class="col-lg-2 col-md-2 col-sm-2">
           <button type="button" name="button" class="btn btn-default btn-md pull-right"><span class="new-h3"><a href="#"><i class="fa fa-pencil"></i> Edit project</a><span></button>
         </div>
@@ -51,83 +56,74 @@
       </div>
       <div class="row box">
         <div class="col-lg-12">
-          <!-- Start collapse -->
-          <div id="accordion" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingOne">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Mission #1 - Plan a meeting to plan the next meeting
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-                <div class="col-lg-12">
-                  <div class="thumbnail">
+          <!-- Collapse button -->
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseMissionOne" aria-expanded="false" aria-controls="collapseMissionOne">
+              Mission #1 - Plan a meeting to plan the next meeting
+            </a>
+          </p>
+          <div class="collapse" id="collapseMissionOne">
+            <div class="card card-block">
+              <div class="col-lg-12">
+                <div class="thumbnail">
 
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="thumbnail">
-
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="thumbnail">
-
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="thumbnail">
-
-                  </div>
                 </div>
               </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingTwo">
-                <h4 class="panel-title">
-                  <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Mission #2 - "Tirar o martelo do Tg"
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                <div class="col-lg-12">
-                  <div class="thumbnail">
+              <div class="col-lg-12">
+                <div class="thumbnail">
 
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="thumbnail">
-
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="thumbnail">
-
-                  </div>
-                </div>
-                <div class="col-lg-12">
-                  <div class="thumbnail">
-
-                  </div>
                 </div>
               </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingThree">
-                <h4 class="panel-title">
-                  <!-- Add new Mission -->
-                  <a href="#new-mission">
-                    Add New Mission <span class="glyphicon glyphicon-plus"></span>
-                  </a>
-                </h4>
+              <div class="col-lg-12">
+                <div class="thumbnail">
+
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="thumbnail">
+
+                </div>
               </div>
             </div>
           </div>
 
-          <!-- End Collapse -->
+          <!-- Mission 2  -->
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#collapseMissionTwo" aria-expanded="false" aria-controls="collapseMissionTwo">
+              Mission #2 - Bake a cake
+            </a>
+          </p>
+          <div class="collapse" id="collapseMissionTwo">
+            <div class="card card-block">
+              <div class="col-lg-12">
+                <div class="thumbnail">
+
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="thumbnail">
+
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="thumbnail">
+
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="thumbnail">
+
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <p>
+            <a class="btn btn-primary" data-toggle="collapse" href="#newMission" aria-expanded="false" aria-controls="newMission">
+              <span class="glyphicon glyphicon-plus"></span> Add New Mission
+            </a>
+          </p>
+
         </div>
       </div>
 
@@ -137,14 +133,33 @@
         </div>
       </div>
       <div class="row box">
-        <div class="col-lg-12">
-          <div class="thumbnail">
+        <p>
+          <a class="btn btn-primary" data-toggle="collapse" href="#collapseMembers" aria-expanded="false" aria-controls="collapseMembers">
+            <span class="glyphicon glyphicon-user"></span> 8 Members
+          </a>
+        </p>
+        <div class="collapse" id="collapseMembers">
+          <div class="card card-block">
+            <div class="col-lg-12">
+              <div class="thumbnail">
 
-          </div>
-        </div>
-        <div class="col-lg-12">
-          <div class="thumbnail">
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="thumbnail">
 
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="thumbnail">
+
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="thumbnail">
+
+              </div>
+            </div>
           </div>
         </div>
       </div>
