--- a/www/profile.html
+++ b/www/profile.html
@@ -41,7 +41,7 @@
       <div class="row" id="center">
         <div class="col-lg-10 col-md-10 col-sm-10">
             <div class="col-lg-2 col-md-2 col-sm-3">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/AWS_Simple_Icons_Non-Service_Specific_User.svg/2000px-AWS_Simple_Icons_Non-Service_Specific_User.svg.png" height="120px" width="120px" />
+              <img class="img-circle" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/AWS_Simple_Icons_Non-Service_Specific_User.svg/2000px-AWS_Simple_Icons_Non-Service_Specific_User.svg.png" height="120px" width="120px" />
             </div>
             <div class="col-lg-10 col-md-10 col-sm-9">
               <div class="col-lg-12 col-md-12 col-sm-12">
