--- a/www/project.html
+++ b/www/project.html
@@ -79,11 +79,14 @@
 
                 </div>
               </div>
+
+              <!-- Add New Quest -->
               <div class="col-lg-12">
                 <div class="thumbnail">
-
+                  <span class="glyphicon glyphicon-plus"></span> Add New Quest
                 </div>
               </div>
+
             </div>
           </div>
 
@@ -113,6 +116,12 @@
               <div class="col-lg-12">
                 <div class="thumbnail">
 
+                </div>
+              </div>
+              <!-- Add New Quest -->
+              <div class="col-lg-12">
+                <div class="thumbnail">
+                  <span class="glyphicon glyphicon-plus"></span> Add New Quest
                 </div>
               </div>
             </div>
