created new service: SlotService. Edit services: 'ProfileService'

--- a/www/index.html
+++ b/www/index.html
@@ -20,14 +20,17 @@
 
     <!-- USER -->
     <script src="js/modules/users/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/users/services/UserService.js" charset="utf-8"></script>
     <script src="js/modules/users/users.js" charset="utf-8"></script>
 
     <!-- PROFILES -->
     <script src="js/modules/profiles/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/profiles/services/ProfileService.js" charset="utf-8"></script>
     <script src="js/modules/profiles/profiles.js" charset="utf-8"></script>
 
     <!-- SLOTS -->
     <script src="js/modules/slots/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/slots/services/SlotService.js" charset="utf-8"></script>
     <script src="js/modules/slots/slots.js" charset="utf-8"></script>
 
     <!-- PROJECTS -->
