Project CSS & Member Card

--- a/www/project.html
+++ b/www/project.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Profile</title>
+    <title>Project</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/project.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/profile.css" media="screen" title="no title" charset="utf-8">
 
   </head>
@@ -149,26 +150,49 @@
         </p>
         <div class="collapse" id="collapseMembers">
           <div class="card card-block">
-            <div class="col-lg-12">
-              <div class="thumbnail">
 
+            <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12">
+              <div class="card-content row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                  <!-- Image -->
+                  <div class="user-image"></div>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                  <h4 class="card-title">FName LName</h4>
+                  <h6 class="card-subtitle text-muted">Occupation</h6>
+                  <a href="#" class="card-link">View Profile</a>
+                </div>
               </div>
             </div>
-            <div class="col-lg-12">
-              <div class="thumbnail">
 
+            <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12">
+              <div class="card-content row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                  <!-- Image -->
+                  <div class="user-image"></div>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                  <h4 class="card-title">FName LName</h4>
+                  <h6 class="card-subtitle text-muted">Occupation</h6>
+                  <a href="#" class="card-link">View Profile</a>
+                </div>
               </div>
             </div>
-            <div class="col-lg-12">
-              <div class="thumbnail">
 
+            <div class="card col-lg-4 col-md-4 col-sm-6 col-xs-12">
+              <div class="card-content row">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                  <!-- Image -->
+                  <div class="user-image"></div>
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                  <h4 class="card-title">FName LName</h4>
+                  <h6 class="card-subtitle text-muted">Occupation</h6>
+                  <a href="#" class="card-link">View Profile</a>
+                </div>
               </div>
             </div>
-            <div class="col-lg-12">
-              <div class="thumbnail">
-
-              </div>
-            </div>
+            
           </div>
         </div>
       </div>
