Create service: QuestService. Update services: ApiService, ProfileService, SlotService, UserService

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
 
     <!-- QUESTS -->
     <script src="js/modules/quests/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/quests/services/QuestService.js" charset="utf-8"></script>
     <script src="js/modules/quests/quests.js" charset="utf-8"></script>
 
 
