--- a/www/home.html
+++ b/www/home.html
@@ -40,18 +40,18 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <button type="button" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h2"><a href="#"><i class="fa fa-plus-square "></i> Create new project</a><span></button>
+          <button type="button" name="button" class="btn btn-default btn-lg pull-right"><span class="new-h3"><a href="#"><i class="fa fa-plus-square "></i> Create new project</a><span></button>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <span class="new-h2"><button class="btn btn-default btn-lg" data-toggle="collapse" data-target="#coll1">My Quests <i class="fa fa-caret-down pull-right"></i></button></span>
+          <span class="new-h1">My Quests</span>
         </div>
       </div>
-      <div class="row box collapse in" id="coll1">
+      <div class="row box">
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
           <div class="thumbnail">
-
+          
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
