--- a/www/newquest.html
+++ b/www/newquest.html
@@ -57,30 +57,31 @@
               <textarea class="form-control" id="mission-description" placeholder="Description"></textarea>
             </div>
 
-            <div class="form-group">
-              <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                  <input type="text" class="form-control" id="skill-title" placeholder="Skill Title">
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                  <input type="text" class="form-control" id="skill-exp" placeholder="20">
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                  <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Add New Skill</button>
+            <div class="box">
+              <div class="form-group">
+                <div class="row">
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <input type="text" class="form-control" id="skill-title" placeholder="Skill Title">
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <input type="text" class="form-control" id="skill-exp" placeholder="20">
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                    <button class="btn btn-default"><span class="glyphicon glyphicon-plus"></span> Add New Skill</button>
+                  </div>
                 </div>
               </div>
-            </div>
 
-            <h4>Skill List</h4>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-              <ul class="list-unstyled">
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-              </ul>
+              <h4>Skill List</h4>
+                <ul class="list-unstyled">
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
+                </ul>
+                <input class="btn btn-default" type="button" value="Input">
             </div>
 
             <div class="form-group">
