--- a/www/index.html
+++ b/www/index.html
@@ -64,7 +64,7 @@
         <div class="col-lg-12">
           <div id="main">
             <h1>Welcome to Fellowship</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Bacon ipsum dolor amet meatball pork pork loin, landjaeger rump spare ribs corned beef brisket beef ribs salami venison t-bone. Ground round jerky salami brisket meatball prosciutto, leberkas capicola beef shankle tenderloin alcatra biltong shank chuck. Alcatra tongue flank meatball ground round bacon chuck t-bone landjaeger doner andouille beef biltong swine turkey. Ribeye corned beef alcatra ball tip kielbasa filet mignon tenderloin. Ball tip shoulder ribeye, short ribs chicken ground round short loin jerky prosciutto spare ribs. Bresaola boudin swine biltong, pork loin doner prosciutto pastrami ground round.</p>
             <hr>
             <a type="button" class="btn btn-default btn-lg" href="login.html">
               <i class="fa fa-user"> Sign In</i>
