Edit Profile Att

--- a/www/editprofile.html
+++ b/www/editprofile.html
@@ -48,11 +48,11 @@
             <div class="row">
               <div class="form-group form-group-lg">
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                  <label for="quest-title" class="control-label">First Name</label>
+                  <label for="user-fname" class="control-label">First Name</label>
                 </div>
 
                 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
-                  <input type="text" class="form-control" id="mission-title" placeholder="First Name">
+                  <input type="text" class="form-control" id="user-fname" placeholder="First Name">
                 </div>
               </div>
             </div>
@@ -60,11 +60,11 @@
             <div class="row">
               <div class="form-group form-group-lg">
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                  <label for="quest-title" class="control-label">Last Name</label>
+                  <label for="user-lname" class="control-label">Last Name</label>
                 </div>
 
                 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
-                  <input type="text" class="form-control" id="mission-title" placeholder="First Name">
+                  <input type="text" class="form-control" id="user-lname" placeholder="First Name">
                 </div>
               </div>
             </div>
@@ -72,11 +72,11 @@
             <div class="row">
               <div class="form-group form-group-lg">
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                  <label for="quest-title" class="control-label">Username</label>
+                  <label for="user-username" class="control-label">Username</label>
                 </div>
 
                 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
-                  <input type="text" class="form-control" id="mission-title" placeholder="First Name">
+                  <input type="text" class="form-control" id="user-username" placeholder="First Name">
                 </div>
               </div>
             </div>
@@ -84,11 +84,11 @@
             <div class="row">
               <div class="form-group form-group-lg">
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                  <label for="quest-title" class="control-label">Occupation</label>
+                  <label for="user-occupation" class="control-label">Occupation</label>
                 </div>
 
                 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
-                  <input type="text" class="form-control" id="mission-title" placeholder="First Name">
+                  <input type="text" class="form-control" id="user-occupation" placeholder="First Name">
                 </div>
               </div>
             </div>
@@ -97,11 +97,11 @@
             <div class="row">
               <div class="form-group form-group-lg">
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                  <label for="quest-title" class="control-label">Change Image</label>
+                  <label for="user-picture" class="control-label">Change Image</label>
                 </div>
                 <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
                   <img class="img-circle" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/41/AWS_Simple_Icons_Non-Service_Specific_User.svg/2000px-AWS_Simple_Icons_Non-Service_Specific_User.svg.png" height="120px" width="120px" />
-                  <button type="submit" class="btn btn-default btn-md">Choose Image</button>
+                  <input type="file" id="user-picture">
                 </div>
               </div>
             </div>
