UserController using service

--- a/www/login.html
+++ b/www/login.html
@@ -19,6 +19,7 @@
 
     <!-- USER -->
     <script src="js/modules/users/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/users/services/UserService.js" charset="utf-8"></script>
     <script src="js/modules/users/users.js" charset="utf-8"></script>
 
     <!-- PROFILES -->
