Create new service: MissionService

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
 
     <!-- MISSIONS -->
     <script src="js/modules/missions/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/missions/services/MissionService.js" charset="utf-8"></script>
     <script src="js/modules/missions/missions.js" charset="utf-8"></script>
 
     <!-- QUESTS -->
