New Project & New Quest att

--- a/www/newquest.html
+++ b/www/newquest.html
@@ -72,14 +72,13 @@
 
               <h4>Skill List</h4>
                 <ul class="list-unstyled">
-                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
-                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-minus"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
+                  <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
                 </ul>
-                <input class="btn btn-default" type="button" value="Input">
             </div>
 
             <div class="form-group">
