add modules and controllers headers to all existent views

--- a/www/editproject.html
+++ b/www/editproject.html
@@ -7,8 +7,57 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
+    <!--  ANGULAR -->
+    <script src="js/angular.min.js" charset="utf-8"></script>
+
+  <!-- MODULES -->
+
+    <!-- API -->
+    <script src="js/modules/api/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/api/services/ApiService.js" charset="utf-8"></script>
+    <script src="js/modules/api/api.js" charset="utf-8"></script>
+
+    <!-- USER -->
+    <script src="js/modules/users/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/users/services/UserService.js" charset="utf-8"></script>
+    <script src="js/modules/users/users.js" charset="utf-8"></script>
+
+    <!-- PROFILES -->
+    <script src="js/modules/profiles/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/profiles/services/ProfileService.js" charset="utf-8"></script>
+    <script src="js/modules/profiles/profiles.js" charset="utf-8"></script>
+
+    <!-- SLOTS -->
+    <script src="js/modules/slots/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/slots/services/SlotService.js" charset="utf-8"></script>
+    <script src="js/modules/slots/slots.js" charset="utf-8"></script>
+
+    <!-- PROJECTS -->
+    <script src="js/modules/projects/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/projects/projects.js" charset="utf-8"></script>
+
+    <!-- MISSIONS -->
+    <script src="js/modules/missions/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/missions/services/MissionService.js" charset="utf-8"></script>
+    <script src="js/modules/missions/missions.js" charset="utf-8"></script>
+
+    <!-- QUESTS -->
+    <script src="js/modules/quests/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/quests/services/QuestService.js" charset="utf-8"></script>
+    <script src="js/modules/quests/quests.js" charset="utf-8"></script>
+
+
+    <!-- BASE MODULE -->
+    <script src="js/modules/modules.js" charset="utf-8"></script>
+
+  <!-- CONTROLLERS -->
+    <script src="js/controllers/controllers.js" charset="utf-8"></script>
+
+    <!-- APP -->
+    <script src="js/app.js" charset="utf-8"></script>
+
   </head>
-  <body>
+  <body ng-app="fellowship" ng-controller="AppController">
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
