--- a/www/signup.html
+++ b/www/signup.html
@@ -24,10 +24,12 @@
 
     <!-- PROFILES -->
     <script src="js/modules/profiles/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/profiles/services/ProfileService.js" charset="utf-8"></script>
     <script src="js/modules/profiles/profiles.js" charset="utf-8"></script>
 
     <!-- SLOTS -->
     <script src="js/modules/slots/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/slots/services/SlotService.js" charset="utf-8"></script>
     <script src="js/modules/slots/slots.js" charset="utf-8"></script>
 
     <!-- PROJECTS -->
@@ -36,10 +38,12 @@
 
     <!-- MISSIONS -->
     <script src="js/modules/missions/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/missions/services/MissionService.js" charset="utf-8"></script>
     <script src="js/modules/missions/missions.js" charset="utf-8"></script>
 
     <!-- QUESTS -->
     <script src="js/modules/quests/services/services.js" charset="utf-8"></script>
+    <script src="js/modules/quests/services/QuestService.js" charset="utf-8"></script>
     <script src="js/modules/quests/quests.js" charset="utf-8"></script>
 
 
@@ -48,12 +52,12 @@
 
   <!-- CONTROLLERS -->
     <script src="js/controllers/controllers.js" charset="utf-8"></script>
-    <script src="js/controllers/users/UserController.js"></script>
+
     <!-- APP -->
     <script src="js/app.js" charset="utf-8"></script>
 
   </head>
-  <body ng-app="fellowship" ng-controller="UserController">
+  <body ng-app="fellowship" ng-controller="AppController">
 
     <div class="container">
       <div class="row">
