--- a/www/project.html
+++ b/www/project.html
@@ -641,7 +641,7 @@
       </div>
       <div class="row box">
         <div class="col-lg-12">
-          <p>
+          <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
             <a class="btn btn-primary" data-toggle="collapse" href="#collapseMembers" aria-expanded="false" aria-controls="collapseMembers">
               <span class="glyphicon glyphicon-user"></span> (8 Members) @username1, @username2, ...
             </a>
