--- a/www/selectmember.html
+++ b/www/selectmember.html
@@ -61,17 +61,16 @@
                 </div>
               </div>
 
-              <h4>Skill List</h4>
-              <ul class="list-unstyled">
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
-                <li><b>JavaScript</b> +20 xp  <button class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Delete Skill</button></li>
-              </ul>
+              <div class="row">
+                <span class="label label-info">JavaScript - Basic <span class="glyphicon glyphicon-remove"></span></span>
+                <span class="label label-info">C# <span class="glyphicon glyphicon-remove"></span></span>
+                <span class="label label-info">HTML - Expert <span class="glyphicon glyphicon-remove"></span></span>
+                <span class="label label-info">CSS <span class="glyphicon glyphicon-remove"></span></span>
+
+              </div>
 
               <hr>
+
               <div class="row">
                 <div class="form-group form-group-lg">
                   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
@@ -84,7 +83,7 @@
                 </div>
 
               </div>
-              
+
               <p class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
                 <a class="btn btn-primary" data-toggle="collapse" href="#collapseApplicants" aria-expanded="true" aria-controls="collapseApplicants">
                   <span class="glyphicon glyphicon-chevron-right"></span> Applicants
