Select Members Att

--- a/www/selectmember.html
+++ b/www/selectmember.html
@@ -62,10 +62,10 @@
               </div>
 
               <div class="row">
-                <span class="label label-info">JavaScript - Basic <span class="glyphicon glyphicon-remove"></span></span>
-                <span class="label label-info">C# <span class="glyphicon glyphicon-remove"></span></span>
-                <span class="label label-info">HTML - Expert <span class="glyphicon glyphicon-remove"></span></span>
-                <span class="label label-info">CSS <span class="glyphicon glyphicon-remove"></span></span>
+                <span class="label label-default">JavaScript - Basic <span class="glyphicon glyphicon-remove"></span></span>
+                <span class="label label-default">C# <span class="glyphicon glyphicon-remove"></span></span>
+                <span class="label label-default">HTML - Expert <span class="glyphicon glyphicon-remove"></span></span>
+                <span class="label label-default">CSS <span class="glyphicon glyphicon-remove"></span></span>
 
               </div>
 
