--- a/www/editprofile.html
+++ b/www/editprofile.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    
+
     <!--  ANGULAR -->
     <script src="js/angular.min.js" charset="utf-8"></script>
 
@@ -57,7 +57,7 @@
     <script src="js/app.js" charset="utf-8"></script>
 
   </head>
-  <body ng-app="fellowship" ng-controller="AppController">
+  <body ng-app="fellowship" ng-controller="AppController" ng-init="redirectIfNotLoggedIn()">
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
