--- a/www/editproject.html
+++ b/www/editproject.html
@@ -57,7 +57,7 @@
     <script src="js/app.js" charset="utf-8"></script>
 
   </head>
-  <body ng-app="fellowship" ng-controller="AppController">
+  <body ng-app="fellowship" ng-controller="AppController" ng-init="redirectIfNotLoggedIn()">
 
     <nav class="navbar navbar-default">
       <div class="container-fluid">
