--- a/www/signup.html
+++ b/www/signup.html
@@ -57,7 +57,7 @@
     <script src="js/app.js" charset="utf-8"></script>
 
   </head>
-  <body ng-app="fellowship" ng-controller="AppController">
+  <body ng-app="fellowship" ng-controller="AppController" ng-init="redirectIfLoggedIn()">
 
     <div class="container">
       <div class="row">
